--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -65,4 +65,20 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+} */
+
+@import "tailwindcss";
+
+
+html, body, #root {
+  height: 100%;
+  background-color: #ffffff;
+}
+#root { max-width: none; margin: 0; padding: 0; }
+
+.tree-wrapper svg {
+  width: 800px;
+  height: auto;
+  display: block;
+  margin: 0 auto;
 }
